History of this buildout
========================

6.1.5 (unreleased)
------------------

- Use collective.recipe.genshi where needed.  We used
  collective.recipe.template[genshi]:genshi so far, but when a
  different buildout part that uses the standard
  collective.recipe.template is executed first, the genshi extra is
  never loaded and buildout quits with an error.
  [maurits]


6.1.4 (2016-11-29)
------------------

- Actually add hotfix to the eggs.  [maurits]


6.1.3 (2016-11-29)
------------------

- November 2016 hotfix.  [maurits]


6.1.2 (2016-11-22)
------------------

- Use plone.app.imagecropping 1.4 and plone.scale 1.4.2.  [maurits]

- Check the email address before registering for an event.
  I have seen several stuck mails that we were trying to
  send to an invalid address.  [maurits]

- Fixed exporting subscribers.  We needed method POST.
  Looks like this has not been working for a while.  [maurits]

- MINA-159: Made all fields required on event subscription form.  This
  was tricky, as there was some non intuitive code here that tripped
  me up.  I clarified the code and made more distinction between
  authenticated and anonymous users.  [maurits]


6.1.1 (2016-10-06)
------------------

- Use internal releases of plone.app.upgrade and plone.scale.
  This avoids a few problems during upgrade and when viewing scales.  [maurits]

- Added experimental.publishtraverse in warning mode.  [maurits]


6.1 (2016-09-23)
----------------

- Updated various versions.  Most possible impact: Reportlab from 2.6
  to 3.3.0, and collective.recaptcha from 1.11.5 to 2.0.0 using
  recaptcha api version 2.  [maurits]

- Updated RelStorage versions.  [maurits]

- Fixed generated zodbconvert.cfg to have a blob-dir in the source.
  Otherwise the conversion crashes on the first record that links to a
  blob file.  Use blobstoragenew as destination blob-dir.  Note that
  in the destination blob dir you may get less files: especially .lock