@@ -11,6 +11,8 @@ parts =
     instance
     test
     env
+    warmup
+    warmup-all
 #    lxml
 deployment-parts =
     munin
@@ -123,6 +125,9 @@ varnish_purge_hosts =
 # Linux.  The Mac does not like it.
 varnish_host = *
 
+# For warmup:
+plonesite = minaraad
+domain = www.minaraad.be
 
 [test]
 recipe = zc.recipe.testrunner
@@ -319,3 +324,41 @@ text =
             /bin/kill -USR2 $(cat ${buildout:directory}/var/instance.pid)
         endscript
     }
+
+[warmup]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/bash
+    # Example usage:
+    # warmup http://localhost:8080/minaraad
+    # warmup https://www.minaraad.be
+    echo "Warmup zope server cache for $1..."
+    # Switch off the http proxy on the server for the duration of this script.
+    HTTP_PROXY=
+    HTTPS_PROXY=
+    wget -O /dev/null "$1/over-de-minaraad"
+    wget -O /dev/null "$1/Contact"
+    wget -O /dev/null "$1/zoeken"
+    wget -O /dev/null "$1/themas"
+    wget -O /dev/null "$1/themas/vergroening-van-de-economie"
+    wget -O /dev/null "$1/themas/bestuurskwaliteit"
+    wget -O /dev/null "$1/themas/materialen"
+    wget -O /dev/null "$1/themas/biodiversiteit"
+    wget -O /dev/null "$1/themas/hinder"
+    wget -O /dev/null "$1/themas/klimaat"
+    # Note that Digibib is only for authenticated users, so we don't load it.
+    echo "Done warming up."
+output = ${buildout:directory}/bin/warmup
+mode = 755
+
+[warmup-all]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/bash
+    echo "Warming up zeoclient and varnish"
+    # Actually, varnish is enough, if we spell the url correctly.
+    # ${buildout:directory}/bin/warmup "http://localhost:${conf:instance}/${conf:plonesite}"
+    ${buildout:directory}/bin/warmup "http://localhost:${conf:varnish}/VirtualHostBase/https/${conf:domain}:443/${conf:plonesite}/VirtualHostRoot"
+    echo "Done!"
+output = ${buildout:directory}/bin/warmup-all
+mode = 755
